--- a/lab1/css/style.css
+++ b/lab1/css/style.css
@@ -35,6 +35,7 @@ header, footer{
 }
 .pageHeader .header__text{
   max-width: 18em;
+  text-align: center;
   margin-left: auto;
   margin-right: 0;
   margin-top: -37px;
@@ -47,7 +48,8 @@ header, footer{
 }
 
 .footer__text{
-  max-width: 12em;
+  max-width: 14em;
+  text-align: right;
   margin-left: auto;
   margin-right: 0;
   margin-top: -37px;
