--- a/lab1/css/style.css
+++ b/lab1/css/style.css
@@ -26,10 +26,12 @@ header, footer, article, nav, div {
 }
 .pageHeader .header__text{
   max-width: 18em;
-  text-align: center;
+  max-height: 5px;
+  text-align:center;
   margin-left: auto;
   margin-right: 0;
-  margin-top: -37px;
+  margin-top: -30px;
+  line-height: 8px;
   border: 1px solid rgb(0, 0, 0);
   background: #ffffff;
 }
@@ -41,10 +43,12 @@ header, footer, article, nav, div {
 }
 .footer__text{
   max-width: 14em;
+  max-height: 5px;
   text-align: right;
   margin-left: auto;
   margin-right: 0;
-  margin-top: -37px;
+  margin-top: -30px;
+  line-height: 6px;
   border: 1px solid rgb(0, 0, 0);
   background: #ffffff;
 }
@@ -52,7 +56,7 @@ header, footer, article, nav, div {
 
 .Article { 
   background-color: aquamarine;
-  grid-area: title;      
+  grid-area: title;   
   text-align: center;   
   font-size: 150%;
 }
