--- a/lab1/css/style.css
+++ b/lab1/css/style.css
@@ -23,14 +23,23 @@ header, footer, article, nav, div {
 .pageHeader {
   background-color: cadetblue;
   grid-area: header;
+  /*margin-bottom: auto;*/
 }
-.pageHeader .header__text{
-  max-width: 18em;
+.header{
+  background-color: cadetblue;
+  grid-area: header;
+}
+/*.pageFooter__main-text{
+  margin-top: 30px;
+}*/
+.header__text{
+  max-width: 300px;
   max-height: 5px;
   text-align:center;
   margin-left: auto;
   margin-right: 0;
-  margin-top: -30px;
+  position: absolute;
+  bottom: 0;
   line-height: 8px;
   border: 1px solid rgb(0, 0, 0);
   background: #ffffff;
